crash [@ mozilla::a11y::TextRange::CommonParent ]
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
People
(Reporter: mkmelin, Assigned: Jamie)
References
(Blocks 2 open bugs, Regression)
Details
(Keywords: crash, regression, Whiteboard: [uiaShipBlocker])
Crash Data
Attachments
(1 file, 1 obsolete file)
| Reporter | ||
Updated•9 months ago
|
Updated•9 months ago
|
Comment 1•9 months ago
•
|
||
FYI seems like the two crash reports above are thunderbird specific, and windows as well
Updated•9 months ago
|
| Assignee | ||
Updated•9 months ago
|
| Assignee | ||
Updated•9 months ago
|
| Assignee | ||
Updated•9 months ago
|
Comment 2•9 months ago
|
||
Set release status flags based on info from the regressing bug 1957314
:Jamie, since you are the author of the regressor, bug 1957314, could you take a look?
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 3•9 months ago
|
||
Chill, bot. I'm on it. :)
| Assignee | ||
Comment 4•9 months ago
|
||
These are implemented in HyperTextAccessibleBase.
Having local and remote use the same implementation makes things simpler, more consistent, easier to test and easier to reason about.
This is also necessary in order to properly test the fix in the next patch.
This breaks the rare edge case of selecting only empty containers for LocalAccessible.
This never worked for RemoteAccessible anyway, which is the majority of content now.
Bug 1973154 has been filed for this.
| Assignee | ||
Comment 5•9 months ago
|
||
It is possible for a DOM selection to start or end within an empty container.
In this case, we have offset 0 in an empty HyperTextAccessible.
This caused two problems.
First, DocAccessibleParent::SelectionRanges previously treated a range as invalid (and thus skipped it) if the offset was >= the character count in the container.
While this usually makes sense, it is problematic for empty containers.
To fix this, always treat offset 0 as valid.
Second, GetChildAtOffset returns null when called on an empty container with offset 0, since there's no child for it to return.
Previously, TextRange::Crop wasn't handling this, resulting in a crash.
To fix this, just use the start/end container itself if GetChildAtOffset returns null.
| Assignee | ||
Comment 6•9 months ago
|
||
Comment 7•9 months ago
|
||
Comment on attachment 9495911 [details]
Bug 1972539 part 1: Remove HyperTextAccessible::SelectionCount and SelectionBoundsAt.
Revision D254466 was moved to bug 1946645. Setting attachment 9495911 [details] to obsolete.
Updated•9 months ago
|
Comment 9•9 months ago
|
||
| bugherder | ||
Comment 10•9 months ago
|
||
The patch landed in nightly and beta is affected.
:Jamie, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- See https://wiki.mozilla.org/Release_Management/Requesting_an_Uplift for documentation on how to request an uplift.
- If no, please set
status-firefox141towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Updated•9 months ago
|
Updated•8 months ago
|
Description
•